add template regression test
Only a part of test case is added.
Execute as follows with postgres running:
$ make world
$ sudo make install-world
$ cd contrib/pg_ivm
$ make installcheck

--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -49,7 +49,8 @@ SUBDIRS = \
 		tsm_system_rows \
 		tsm_system_time \
 		unaccent	\
-		vacuumlo
+		vacuumlo	\
+		pg_ivm
 
 ifeq ($(with_ssl),openssl)
 SUBDIRS += pgcrypto sslinfo
